Moved CT padding. Avoids scrollbar.

--- a/styles/cp.css
+++ b/styles/cp.css
@@ -601,13 +601,13 @@ border-collapse: collapse;
 
 .h5p-course-presentation .h5p-advanced-text,
 .h5p-course-presentation .h5p-link,
-.h5p-course-presentation .ct {
+.h5p-course-presentation .h5p-ct {
   font-size: 0.75em;
   padding: 0.375em 0.5em;
 }
 .h5p-course-presentation .h5p-transparent.h5p-advanced-text,
 .h5p-course-presentation .h5p-transparent.h5p-link,
-.h5p-course-presentation .h5p-transparent .ct {
+.h5p-course-presentation .h5p-transparent.h5p-ct {
   padding: 0;
 }
 .h5p-course-presentation .h5p-advanced-text p span {
